--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hotel Zeks | your choice is here</title>
+    <title>Zee Coder | your choice is here</title>
     <link rel="shortcut icon" href="img/hotel.jpg" class="shortcut icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -25,7 +25,7 @@
                         <a class="nav-link" aria-current="page" href="/ZeeCoder/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Zeecoder/about.html">About</a>
+                        <a class="nav-link" href="/ZeeCoder/about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
